--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,10 @@
 [[redirects]]
-from = "/order"
-to = "https://hop.clickbank.net/?affiliate=527914&vendor=resurge&lid=rt01&tid=organic"
+from = "/index.html"
+to = "/"
 status = 301
 force = true
+
+[[redirects]]
+from = "/*"
+to = "404.html"
+status = 404
